app/style.css
html, body {
    font-family: monospace;
    font-size: 1.3em;
    color: black;
    position: relative;
    height: 100%;
    overflow: auto;
    margin: 0;
    background-color: #4B807A;
    
}

body {
  overflow: auto;
  overflow: initial;
}


#react-root {
    
    position: relative;
    text-align: left;
    height: 100%;
    user-select: none;
}




#root-contained {
  display: flex;
  height: 100%;
  flex-direction: column;
}

#center-panels-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  
    margin-top: 160px;
}

.panel {
    
    width: 90%;
}

.finger-spelling-asl {
  filter:invert();
  vertical-align: bottom;
  margin-left: 5px;
}

code {
  background-color: #22423f;
}

a {
  color: #22ca46
}

button {
  color: white;
  font-weight: bolder;
  font-family: sans-serif;
  background-color: #177c2d;
  border-radius: 10%;
  border-color: #11e23e;
  font-size: 16px;
}

button:hover {
  cursor: pointer;
}

header {
  top: 0;
  position: fixed;
  width: 100%;
  display: flex;
  z-index: 1;
  flex-direction: row;
  background-color: #457570;
  align-items: end;
  margin-bottom: 7.5px;
}

#logo {
  margin-top: 5px;
  margin-right: 10px;
  margin-left: 10px;
  margin-bottom: 5px;
  border-radius: 33%;
  

}

.logo-initial {
  height: 150px;
}

shrink-appear {
  height: 150px;
}

.shrink-appear-active {
  animation-duration: 1s;
  animation-name: shrink;
  animation-fill-mode: forwards;
  animation-timing-function: linear;
}

.shrink-appear-done {
  height: 75px;
  
}

.shrink-enter {
  height: 150px;
}

.shrink-enter-active {
  animation-duration: 1s;
  animation-name: shrink;
  animation-fill-mode: forwards;
  animation-timing-function: linear;
}

.shrink-enter-done {
  height: 75px;
}

.shrink-exit {
  height: 75px;
}

.shrink-exit-active {
  animation-direction: reverse;
  animation-duration: 1s;
  animation-name: shrink;
  animation-fill-mode: forwards;
  animation-timing-function: linear;
}

.shrink-exit-done {
  height: 150px;
}

@keyframes shrink {
  from {
    height: 150px;
  }

  to {
    height: 75px;
  }
}



#title {
  display: inline-block;
  
  font-size: 50px;
  font-weight: bold;
  margin: 0;
}

section {
  margin: 7.5px 0;
  /* max-width here causes sections to remain centered horizontally*/
  max-width: 1100px;
}

#grid {
  max-width: 1100px;
  display: grid;
  border-top: solid 5px black;
  border-left: solid 5px black;
  grid-template-columns: 1fr 1fr 1fr;
  
}

.hover-desc-anchor {
  position: relative;
}

.hover-desc-anchor a {
  color: inherit;
}

.white-text {
  color: white;
}

.black-text {
  color: black;
}

figure {
    margin: 0;
}

.hover-desc-overlay {
  position: absolute;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-right: solid 5px black;
  border-bottom: solid 5px black;
  height: 100%;
  width: 100%;

  transition: backdrop-filter .5s ease-in-out, opacity .5s ease-in-out;
  opacity: 0;
}

.hover-desc-overlay:hover {
  backdrop-filter: blur(5px);
  opacity: 100%;
}

.hover-desc-overlay-subheading {
  font-size: .5em;
}

#grid img {
  display: block;
  box-sizing: border-box;
  background-color: white;
  width: 100%;
  border-right: solid 5px black;
  border-bottom: solid 5px black;
}

.text-focus {
  box-sizing: border-box;
  background-color: #356660;
  padding: 0 15px;
  border: solid 5px black;
}

.text-focus p {
  max-width: 75ch;
}

#about-me-first-para {
  font-size: 1.25em;
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 100%;
}

#about-me-first-para > img {
  display: inline-block;
}

#blog-post > h1 {
  text-align: center;
}

hr {
  color: black;
  border: 1px solid;
}

#blog-nav > p {
  text-align: center;
}

footer {
  background-color: #457570;
  text-align: center;
  margin-top: 7.5px;;
}

@media (max-width: 500px) {
   #grid {
      grid-template-columns: 1fr;
   }
  
  @media (max-width: 340px) {
   header {
      flex-wrap: wrap;
   }
  }
}

@media (hover: none) {
    .hover-desc-overlay {
        opacity: 100%;
    }


    .hover-desc-overlay > span {
        backdrop-filter: blur(5px);
        border: 1px black solid;
        padding: 3px;
        border-radius: 5px;
    }
}

